# kakigori

./: .gitignore  _test_gelato_config.json  hierarchy.json  look.json  main.py  new.json  old_gelato_config.json  out.krn  pipeline.sh  pyproject.toml  small_config.json  structure.json  synthetic.md  test.json  test.md  test_humdrum.krn  train.sh
conf/: config.json  consolidation.yaml  fine_tune.yaml  hierarchy.json  old_config.json  smufl_mapping.json  structure.json  train.yaml  train_gnn.yaml
data/test/: Qma7131P1hH5Vr2tighDDbKr1ggxeJ2L292a1SxTfjEeN6.mxl  Qma714gskH4TDMYkDeDnrFBs9ywkbyTwujFm1hhhVE5W8B.mxl  Qma71F9hZ6h4EkzMGzgke3W4VTc8HpKPJMDDds5mnJJ5UH.mxl  Qma71FsCXCMdJvau57qvad8iNi28A28BqHZ964LDiQJH22.mxl  Qma71GQth1QUN8TiGFMMqp5uFGJo2UY3ysDbh5VCXvT1ES.mxl  Qma71Hok1Nd7ka58gR2cQvq1tyg2atYMoviqZcDKbuJuSA.mxl  Qma71JG9UDx7EGLGK6qEpd3Quja2cpssDgPr5jej9bTeZU.mxl  Qma71wNL9fNG5RndkP2jcCUeLi8e3LWpL6ZJGhtsSfhKDr.mxl  Qma72bf7d5PVVTHFc1QY54Cx2duX8nQSDNuJzS5hrMJVGs.mxl  Qma72epbHZgtr72veYV95QyR4UdZfpsuGXU1wLFaKYigkn.mxl  Qma72wAAezcoSUPcvKciHayszFFLk4ywx1f73Nc7Gkwqo3.mxl  Qma72wr2rRvrGdkwQYqWXCmicKTqKWuBWYx7uDzrLuAQ9n.mxl  Qma72x4VtbjWw2B7t6eNhZorCC6Q5wkvmKrc8RLDEXA7T3.mxl  Qma735yyS1FPWMP2nxt9mawjn4p6sPtDwZ888nsubh4tCQ.mxl  Qma73E53CPTBSqhe2w9PJPGZngSCLgocdtu8g68tRSByCL.mxl  Qma73EkNy8GQUgQmR6hxatMuoP2AYwHEHA1z9jFXVspKUN.mxl  Qma73LHVjdL3M8pSFYcjBmmi6t4zGF2wCCjEAQRp1EWeCn.mxl  Qma73VJZPTJFSuLP7UvpWgzyiLmLoNroc8ciLzDvF4ibb3.mxl  Qma73d83c5hxHwHuaaZ2qRjQTU5TzQL4n5C8WCXj6AgGax.mxl  Qma73dAZWH1MtMcdTGUqErNwyvBqKNVJYPbi54ZEQPtXmo.mxl  Qma73u92ousNLrZEqyqWzdVAJb38yVcaE7Hw56txinyxiA.mxl  Qma73wGt6fhzy9zHD66UoWDYa188uXbWBB4WVwanYhFFdo.mxl  Qma7443A3NMcnxjz2WSDJNXjfj1fa1JSebhKQ4dNr7Mroi.mxl  Qma745CpTJ4o5Frd1TBXbEUBw1emXqtmdYTbFy9Cxu8dgf.mxl  Qma7468ekzbzuWuxzX1SBePhV4wsuypFqSqR2PDQvCeJ4z.mxl  Qma749NmXvcZ82WwCkpHfiq7hzUjGXNb7mbwg1GJfzJfWt.mxl  Qma75dBYhPG87NFmLqKQ1ejESMTv1R7pjh5TJmLJU1LYbb.mxl  Qma75hZy6fNDePGkSXcTDa3ZUHby2JMpRkztSSnqY4wY1C.mxl  Qma75hnMHEJM9Ju2tQpma3kTsTgJwSeixnvRs4yP5yppGt.mxl  Qma75j3fKFPLVtcqcT1BJa8jpNu62EZSugN9T9ZX4j1ZhL.mxl  Qma764AN6b8wYEA7PAa2bEB7Ej1C9gyPqdszvCjKBSx6bd.mxl  Qma76DLkAgobVxJUi6eVXh7Sykgjt52bEDVo6ESwLgU4hj.mxl  Qma76RrZ59WxpjaveUfjvhRrto9nrAutuNpzMGGqyPro7p.mxl  Qma76o7P7K7utrHWN4wfwTQ7hwFAWPBxkzGmh4Zr7KTLLB.mxl  Qma771PvnGuNM9xsshFqc2fUzPS4rhLgS2kAs83ZPrBG4k.mxl  Qma77DBsx99gXuHfe4bf6GfnQTPZ9MRsr35f3CRm6ApFzW.mxl  Qma77DtStKdjJhsCCnvg81ZhC3EYtUqwhgeHPW6m8Moaq4.mxl  Qma77WBoA5NPAtyqp8436Xoz19kByzz1wHhFqv8PXmd5Zc.mxl  Qma77b2QetDY8rRTQegZrMHkFC9haGDQ8CWBHMFNX9tbeJ.mxl  Qma77kGZvDGS9HDWtPyvWdDi5v7C4weMiozJrbbjhgMEAo.mxl  (+201 more)
docs/: _quarto.yml  graph.md  split.md  synthetic.md  test.md  writer.md
docs/experiments/graph/: Exploring.ipynb  Look.ipynb
experiments/: finetuning.ipynb  hyperparameter.ipynb  tensorboard_analysis.ipynb
experiments/graph/: Look.ipynb
experiments/vision/: finetuning copy.ipynb  hyperparameter.ipynb
src/gelato_graph/dataset/: extract_annotations.py  extract_classes.py  filter_mxl.py  frequencies.py  render_dataset.py  synthetic_generator.py  visualize_dataset.py
src/gelato_graph/graph/: dataset.py  losses.py
src/gelato_graph/model/: calculate_areas.py  collator.py  dataset.py  eval.py  infer.py  layers.py  losses.py  model.py  train.py  trainer.py  utils.py  visualize.py
src/gelato_graph/tests/: test_trainer_unit.py
src/kakigori/dataset/: export_dataset.py  extract_annotations.py  extract_classes.py  filter_mxl.py  frequencies.py  generate_graphs.py  inject_mxl_ids.py  render_dataset.py  synthetic_arranger.py  synthetic_generator.py  synthetic_writer.py  visualize_dataset.py  visualize_graphs.py  visualize_graphs_pysigma.py
src/kakigori/graph/: context.py  dataset.py  eval.py  extract_graph.py  fixes.py  heuristics.py  infer.py  layers.py  losses.py  metrics.py  model.py  old_h.py  old_serializers.py  parsers.py  serialization.py  serializer.py  serializers.py  train.py  train_tools.py  trainer.py  utils.py  validate_groundtruth.py
src/kakigori/matching/: layers.py  models.py  steps.py
src/kakigori/tests/: test_trainer_unit.py
src/kakigori/trash/: dataset.py  krnn.py
src/kakigori/vision/: calculate_areas.py  dataset.py  eval.py  infer.py  layers.py  losses.py  model.py  train.py  trainer.py  utils.py  visualize.py
